# CAPSTONE

./: Makefile  requirements.txt
CAPSTONE/: LICENSE  README.md  pyproject.toml
CAPSTONE/capstone/: __init__.py
CAPSTONE/capstone/eval/: metrics.py
CAPSTONE/capstone/perception/: color.py  geometry.py  pose.py  visualize.py
CAPSTONE/capstone/reasoning/: __init__.py  inference.py
CAPSTONE/capstone/translation/: __init__.py  extractors.py  formatter.py
CAPSTONE/capstone/utils/: io.py
CAPSTONE/docs/: architecture.md
CAPSTONE/scripts/: run_reasoning.py
capstone/eval/: __init__.py
capstone/perception/: __init__.py  detector.py  models.py
capstone/reasoning/: llm.py  prompts.py
capstone/utils/: __init__.py
configs/: default.yaml
scripts/: evaluate.py  run_perception.py
