[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capstone-vlr"
version = "0.1.0"
description = "Composable Attribute-Prompted Scene Translation for Zero-Shot Vision-Language Reasoning"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Md. Ismail Hossain" },
    { name = "Shahriyar Zaman Ridoy" },
    { name = "Moshiur Farazi" },
    { name = "Nabeel Mohammed" },
    { name = "Shafin Rahman" },
]
keywords = [
    "vision-language", "zero-shot", "VQA", "spatial-reasoning",
    "LLM", "neural-symbolic", "POPE", "VSR",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "accelerate>=0.27.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "ultralytics>=8.1.0",
    "easyocr>=1.7.0",
    "opencv-python>=4.8.0",
    "scikit-learn>=1.3.0",
    "Pillow>=10.0.0",
    "matplotlib>=3.7.0",
    "datasets>=2.18.0",
]

[project.urls]
Homepage = "https://github.com/ismail31416/CAPSTONE"
Paper = "https://aclanthology.org/venues/emnlp/"

[project.scripts]
capstone-perceive = "scripts.run_perception:main"
capstone-reason = "scripts.run_reasoning:main"
capstone-eval = "scripts.evaluate:main"

[tool.setuptools]
packages = ["capstone"]
